# amiitool

./: .gitignore  CMakeLists.txt  amiitool_lib.h  gitversion.h.in
mbedtls_gen/: psa_crypto_driver_wrappers.c  version_features.c
src_bin/: amiitool.c
src_lib/: amiitool_lib.c
